demo/demoParser.py
# Generated from demo.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class demoParser ( Parser ):

    grammarFileName = "demo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<='", "':'" ]

    symbolicNames = [ "<INVALID>", "SIGNEDBY", "COLON", "POLICY", "COMMAND", 
                      "REPLY", "OPERATOR", "USER", "MYHOUSE", "KEY", "UNDERSCORE", 
                      "STRING", "WS" ]

    RULE_policy = 0
    RULE_statement = 1
    RULE_st = 2
    RULE_msg = 3
    RULE_cmd = 4
    RULE_rep = 5
    RULE_cert = 6
    RULE_opcert = 7
    RULE_usercert = 8
    RULE_domaincert = 9
    RULE_domain = 10
    RULE_keyinfo = 11
    RULE_param = 12
    RULE_s1 = 13
    RULE_s2 = 14
    RULE_s3 = 15

    ruleNames =  [ "policy", "statement", "st", "msg", "cmd", "rep", "cert", 
                   "opcert", "usercert", "domaincert", "domain", "keyinfo", 
                   "param", "s1", "s2", "s3" ]

    EOF = Token.EOF
    SIGNEDBY=1
    COLON=2
    POLICY=3
    COMMAND=4
    REPLY=5
    OPERATOR=6
    USER=7
    MYHOUSE=8
    KEY=9
    UNDERSCORE=10
    STRING=11
    WS=12

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PolicyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POLICY(self):
            return self.getToken(demoParser.POLICY, 0)

        def STRING(self):
            return self.getToken(demoParser.STRING, 0)

        def COLON(self):
            return self.getToken(demoParser.COLON, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(demoParser.StatementContext)
            else:
                return self.getTypedRuleContext(demoParser.StatementContext,i)


        def getRuleIndex(self):
            return demoParser.RULE_policy

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPolicy" ):
                listener.enterPolicy(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPolicy" ):
                listener.exitPolicy(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPolicy" ):
                return visitor.visitPolicy(self)
            else:
                return visitor.visitChildren(self)




    def policy(self):

        localctx = demoParser.PolicyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_policy)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(demoParser.POLICY)
            self.state = 33
            self.match(demoParser.STRING)
            self.state = 34
            self.match(demoParser.COLON)
            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==demoParser.MYHOUSE:
                self.state = 35
                self.statement()
                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def msg(self):
            return self.getTypedRuleContext(demoParser.MsgContext,0)


        def cert(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(demoParser.CertContext)
            else:
                return self.getTypedRuleContext(demoParser.CertContext,i)


        def SIGNEDBY(self):
            return self.getToken(demoParser.SIGNEDBY, 0)

        def getRuleIndex(self):
            return demoParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = demoParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 46
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.msg()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 42
                self.cert()
                self.state = 43
                self.match(demoParser.SIGNEDBY)
                self.state = 44
                self.cert()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def s1(self):
            return self.getTypedRuleContext(demoParser.S1Context,0)


        def s2(self):
            return self.getTypedRuleContext(demoParser.S2Context,0)


        def s3(self):
            return self.getTypedRuleContext(demoParser.S3Context,0)


        def getRuleIndex(self):
            return demoParser.RULE_st

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSt" ):
                listener.enterSt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSt" ):
                listener.exitSt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSt" ):
                return visitor.visitSt(self)
            else:
                return visitor.visitChildren(self)




    def st(self):

        localctx = demoParser.StContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_st)
        try:
            self.state = 51
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.s1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.s2()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 50
                self.s3()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MsgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmd(self):
            return self.getTypedRuleContext(demoParser.CmdContext,0)


        def rep(self):
            return self.getTypedRuleContext(demoParser.RepContext,0)


        def getRuleIndex(self):
            return demoParser.RULE_msg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMsg" ):
                listener.enterMsg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMsg" ):
                listener.exitMsg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMsg" ):
                return visitor.visitMsg(self)
            else:
                return visitor.visitChildren(self)




    def msg(self):

        localctx = demoParser.MsgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_msg)
        try:
            self.state = 55
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.cmd()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.rep()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def domain(self):
            return self.getTypedRuleContext(demoParser.DomainContext,0)


        def COMMAND(self):
            return self.getToken(demoParser.COMMAND, 0)

        def param(self):
            return self.getTypedRuleContext(demoParser.ParamContext,0)


        def getRuleIndex(self):
            return demoParser.RULE_cmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmd" ):
                listener.enterCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmd" ):
                listener.exitCmd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmd" ):
                return visitor.visitCmd(self)
            else:
                return visitor.visitChildren(self)




    def cmd(self):

        localctx = demoParser.CmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_cmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.domain()
            self.state = 58
            self.match(demoParser.COMMAND)
            self.state = 59
            self.param()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RepContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def domain(self):
            return self.getTypedRuleContext(demoParser.DomainContext,0)


        def REPLY(self):
            return self.getToken(demoParser.REPLY, 0)

        def param(self):
            return self.getTypedRuleContext(demoParser.ParamContext,0)


        def getRuleIndex(self):
            return demoParser.RULE_rep

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRep" ):
                listener.enterRep(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRep" ):
                listener.exitRep(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRep" ):
                return visitor.visitRep(self)
            else:
                return visitor.visitChildren(self)




    def rep(self):

        localctx = demoParser.RepContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_rep)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.domain()
            self.state = 62
            self.match(demoParser.REPLY)
            self.state = 63
            self.param()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CertContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def opcert(self):
            return self.getTypedRuleContext(demoParser.OpcertContext,0)


        def usercert(self):
            return self.getTypedRuleContext(demoParser.UsercertContext,0)


        def domaincert(self):
            return self.getTypedRuleContext(demoParser.DomaincertContext,0)


        def getRuleIndex(self):
            return demoParser.RULE_cert

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCert" ):
                listener.enterCert(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCert" ):
                listener.exitCert(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCert" ):
                return visitor.visitCert(self)
            else:
                return visitor.visitChildren(self)




    def cert(self):

        localctx = demoParser.CertContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cert)
        try:
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.opcert()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.usercert()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.domaincert()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpcertContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def domain(self):
            return self.getTypedRuleContext(demoParser.DomainContext,0)


        def OPERATOR(self):
            return self.getToken(demoParser.OPERATOR, 0)

        def keyinfo(self):
            return self.getTypedRuleContext(demoParser.KeyinfoContext,0)


        def getRuleIndex(self):
            return demoParser.RULE_opcert

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpcert" ):
                listener.enterOpcert(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpcert" ):
                listener.exitOpcert(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpcert" ):
                return visitor.visitOpcert(self)
            else:
                return visitor.visitChildren(self)




    def opcert(self):

        localctx = demoParser.OpcertContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_opcert)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.domain()
            self.state = 71
            self.match(demoParser.OPERATOR)
            self.state = 72
            self.keyinfo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UsercertContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def domain(self):
            return self.getTypedRuleContext(demoParser.DomainContext,0)


        def USER(self):
            return self.getToken(demoParser.USER, 0)

        def keyinfo(self):
            return self.getTypedRuleContext(demoParser.KeyinfoContext,0)


        def getRuleIndex(self):
            return demoParser.RULE_usercert

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsercert" ):
                listener.enterUsercert(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsercert" ):
                listener.exitUsercert(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUsercert" ):
                return visitor.visitUsercert(self)
            else:
                return visitor.visitChildren(self)




    def usercert(self):

        localctx = demoParser.UsercertContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_usercert)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.domain()
            self.state = 75
            self.match(demoParser.USER)
            self.state = 76
            self.keyinfo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DomaincertContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def domain(self):
            return self.getTypedRuleContext(demoParser.DomainContext,0)


        def keyinfo(self):
            return self.getTypedRuleContext(demoParser.KeyinfoContext,0)


        def getRuleIndex(self):
            return demoParser.RULE_domaincert

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomaincert" ):
                listener.enterDomaincert(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomaincert" ):
                listener.exitDomaincert(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDomaincert" ):
                return visitor.visitDomaincert(self)
            else:
                return visitor.visitChildren(self)




    def domaincert(self):

        localctx = demoParser.DomaincertContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_domaincert)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.domain()
            self.state = 79
            self.keyinfo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DomainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MYHOUSE(self):
            return self.getToken(demoParser.MYHOUSE, 0)

        def getRuleIndex(self):
            return demoParser.RULE_domain

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomain" ):
                listener.enterDomain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomain" ):
                listener.exitDomain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDomain" ):
                return visitor.visitDomain(self)
            else:
                return visitor.visitChildren(self)




    def domain(self):

        localctx = demoParser.DomainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_domain)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(demoParser.MYHOUSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KeyinfoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEY(self):
            return self.getToken(demoParser.KEY, 0)

        def param(self):
            return self.getTypedRuleContext(demoParser.ParamContext,0)


        def getRuleIndex(self):
            return demoParser.RULE_keyinfo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKeyinfo" ):
                listener.enterKeyinfo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKeyinfo" ):
                listener.exitKeyinfo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKeyinfo" ):
                return visitor.visitKeyinfo(self)
            else:
                return visitor.visitChildren(self)




    def keyinfo(self):

        localctx = demoParser.KeyinfoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_keyinfo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(demoParser.KEY)
            self.state = 84
            self.param()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(demoParser.STRING)
            else:
                return self.getToken(demoParser.STRING, i)

        def getRuleIndex(self):
            return demoParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = demoParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 86
                self.match(demoParser.STRING)
                self.state = 89 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==demoParser.STRING):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class S1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmd(self):
            return self.getTypedRuleContext(demoParser.CmdContext,0)


        def SIGNEDBY(self):
            return self.getToken(demoParser.SIGNEDBY, 0)

        def opcert(self):
            return self.getTypedRuleContext(demoParser.OpcertContext,0)


        def getRuleIndex(self):
            return demoParser.RULE_s1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS1" ):
                listener.enterS1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS1" ):
                listener.exitS1(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitS1" ):
                return visitor.visitS1(self)
            else:
                return visitor.visitChildren(self)




    def s1(self):

        localctx = demoParser.S1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_s1)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.cmd()
            self.state = 92
            self.match(demoParser.SIGNEDBY)
            self.state = 93
            self.opcert()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class S2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rep(self):
            return self.getTypedRuleContext(demoParser.RepContext,0)


        def SIGNEDBY(self):
            return self.getToken(demoParser.SIGNEDBY, 0)

        def opcert(self):
            return self.getTypedRuleContext(demoParser.OpcertContext,0)


        def usercert(self):
            return self.getTypedRuleContext(demoParser.UsercertContext,0)


        def getRuleIndex(self):
            return demoParser.RULE_s2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS2" ):
                listener.enterS2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS2" ):
                listener.exitS2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitS2" ):
                return visitor.visitS2(self)
            else:
                return visitor.visitChildren(self)




    def s2(self):

        localctx = demoParser.S2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_s2)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.rep()
                self.state = 96
                self.match(demoParser.SIGNEDBY)
                self.state = 97
                self.opcert()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.usercert()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class S3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def opcert(self):
            return self.getTypedRuleContext(demoParser.OpcertContext,0)


        def usercert(self):
            return self.getTypedRuleContext(demoParser.UsercertContext,0)


        def SIGNEDBY(self):
            return self.getToken(demoParser.SIGNEDBY, 0)

        def domaincert(self):
            return self.getTypedRuleContext(demoParser.DomaincertContext,0)


        def getRuleIndex(self):
            return demoParser.RULE_s3

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS3" ):
                listener.enterS3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS3" ):
                listener.exitS3(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitS3" ):
                return visitor.visitS3(self)
            else:
                return visitor.visitChildren(self)




    def s3(self):

        localctx = demoParser.S3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_s3)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.opcert()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.usercert()
                self.state = 104
                self.match(demoParser.SIGNEDBY)
                self.state = 105
                self.domaincert()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





